auto publishing updates to notebooks

--- a/arellano.ipynb
+++ b/arellano.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c76102c0",
+   "id": "37ce09b7",
    "metadata": {},
    "source": [
     "# Default Risk and Income Fluctuations"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "966df2a5",
+   "id": "7b15dc5a",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dfefb383",
+   "id": "6f5ce7a8",
    "metadata": {
     "hide-output": false
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4b8580b",
+   "id": "6778853d",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e6c9627b",
+   "id": "b25a6967",
    "metadata": {
     "hide-output": false
    },
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b70c5bc3",
+   "id": "8d8e4252",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -115,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc412508",
+   "id": "94212c51",
    "metadata": {
     "hide-output": false
    },
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e348621d",
+   "id": "cbec850e",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase the precision."
@@ -135,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15f9106d",
+   "id": "74343e33",
    "metadata": {
     "hide-output": false
    },
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b65a1a08",
+   "id": "605ca0f7",
    "metadata": {},
    "source": [
     "## Structure\n",
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1596e8d",
+   "id": "0972e9f8",
    "metadata": {},
    "source": [
     "### Output, Consumption and Debt\n",
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b1c2a4ec",
+   "id": "37354a7a",
    "metadata": {},
    "source": [
     "### Asset Markets\n",
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ad302a9",
+   "id": "758f5992",
    "metadata": {},
    "source": [
     "### Financial Markets\n",
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f04219f6",
+   "id": "559fc699",
    "metadata": {},
    "source": [
     "### Government’s Decisions\n",
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52ba2e5b",
+   "id": "0e9802a0",
    "metadata": {},
    "source": [
     "### Reentering International Credit Market\n",
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "08d2e635",
+   "id": "24a8f8b3",
    "metadata": {},
    "source": [
     "## Equilibrium\n",
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29c6f3dd",
+   "id": "beb3b20e",
    "metadata": {},
    "source": [
     "### Definition of Equilibrium\n",
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3eee2c0a",
+   "id": "22094cad",
    "metadata": {},
    "source": [
     "## Computation\n",
@@ -481,7 +481,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4329208a",
+   "id": "9682b35f",
    "metadata": {
     "hide-output": false
    },
@@ -505,7 +505,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "06e6b6bf",
+   "id": "c1375d03",
    "metadata": {
     "hide-output": false
    },
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13f36850",
+   "id": "b3c782f8",
    "metadata": {},
    "source": [
     "Here is the utility function."
@@ -551,7 +551,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14c9ae28",
+   "id": "13115bf4",
    "metadata": {
     "hide-output": false
    },
@@ -564,7 +564,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "942359d5",
+   "id": "114bc5a2",
    "metadata": {},
    "source": [
     "Here is a function to compute the bond price at each state, given $ v_c $ and\n",
@@ -574,7 +574,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ddb9a884",
+   "id": "49439f22",
    "metadata": {
     "hide-output": false
    },
@@ -609,7 +609,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86e22985",
+   "id": "00738527",
    "metadata": {},
    "source": [
     "Next we introduce Bellman operators that updated $ v_d $ and $ v_c $."
@@ -618,7 +618,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "399c68dc",
+   "id": "71e82b75",
    "metadata": {
     "hide-output": false
    },
@@ -649,7 +649,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a97f6022",
+   "id": "05a678ee",
    "metadata": {
     "hide-output": false
    },
@@ -692,7 +692,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "172c0793",
+   "id": "9e73553f",
    "metadata": {
     "hide-output": false
    },
@@ -706,7 +706,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67b22c69",
+   "id": "dea78e32",
    "metadata": {
     "hide-output": false
    },
@@ -719,7 +719,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec0e4225",
+   "id": "ca7b1288",
    "metadata": {},
    "source": [
     "Let’s make JIT-compiled versions of these functions, with the sizes of the\n",
@@ -729,7 +729,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "627d301f",
+   "id": "3a5023b1",
    "metadata": {
     "hide-output": false
    },
@@ -744,7 +744,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "89a0a554",
+   "id": "accd6995",
    "metadata": {},
    "source": [
     "Here is a function that calls these operators in the right sequence."
@@ -753,7 +753,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c85349e",
+   "id": "bb66753b",
    "metadata": {
     "hide-output": false
    },
@@ -770,7 +770,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c657464b",
+   "id": "7d611c3f",
    "metadata": {},
    "source": [
     "We can now write a function that will use an instance of `ArellanoEconomy` and\n",
@@ -784,7 +784,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f7adee9a",
+   "id": "9b524225",
    "metadata": {
     "hide-output": false
    },
@@ -833,7 +833,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5818ddf4",
+   "id": "003518b0",
    "metadata": {},
    "source": [
     "Let’s try solving the model."
@@ -842,7 +842,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "884eaf37",
+   "id": "1535e1a0",
    "metadata": {
     "hide-output": false
    },
@@ -854,7 +854,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a013676d",
+   "id": "7dbe285c",
    "metadata": {
     "hide-output": false
    },
@@ -866,7 +866,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48ac0b18",
+   "id": "6063c91c",
    "metadata": {},
    "source": [
     "We run it again to get rid of compile time."
@@ -875,7 +875,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5be8506c",
+   "id": "c45fdca7",
    "metadata": {
     "hide-output": false
    },
@@ -887,7 +887,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2be35ed4",
+   "id": "cbe3778e",
    "metadata": {},
    "source": [
     "Finally, we write a function that will allow us to simulate the economy once\n",
@@ -897,7 +897,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4bf29985",
+   "id": "f28a81c6",
    "metadata": {
     "hide-output": false
    },
@@ -970,7 +970,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7a2ffce9",
+   "id": "3fee0b60",
    "metadata": {},
    "source": [
     "## Results\n",
@@ -1036,7 +1036,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9bdecae4",
+   "id": "2f09a968",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -1044,7 +1044,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a1f99f1d",
+   "id": "1f0432e9",
    "metadata": {},
    "source": [
     "## Exercise 17.1\n",
@@ -1057,7 +1057,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d358c643",
+   "id": "bcc06f58",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 17.1](https://jax.quantecon.org/#arellano_ex1)\n",
@@ -1068,7 +1068,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23912123",
+   "id": "453d2399",
    "metadata": {
     "hide-output": false
    },
@@ -1080,7 +1080,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3074904f",
+   "id": "de10453f",
    "metadata": {},
    "source": [
     "Compute the bond price schedule as seen in figure 3 of [[Arellano, 2008](https://jax.quantecon.org/zreferences.html#id255)]"
@@ -1089,7 +1089,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a8136ab0",
+   "id": "881a236c",
    "metadata": {
     "hide-output": false
    },
@@ -1125,7 +1125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e3fece74",
+   "id": "edb9ce46",
    "metadata": {},
    "source": [
     "Draw a plot of the value functions"
@@ -1134,7 +1134,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff1b47df",
+   "id": "ac550916",
    "metadata": {
     "hide-output": false
    },
@@ -1154,7 +1154,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc0dbc7e",
+   "id": "c932dadd",
    "metadata": {},
    "source": [
     "Draw a heat map for default probability"
@@ -1163,7 +1163,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b628e2bc",
+   "id": "89ed9106",
    "metadata": {
     "hide-output": false
    },
@@ -1190,7 +1190,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f62fbdec",
+   "id": "b2b050be",
    "metadata": {},
    "source": [
     "Plot a time series of major variables simulated from the model"
@@ -1199,7 +1199,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7910939d",
+   "id": "0a8a6179",
    "metadata": {
     "hide-output": false
    },
@@ -1218,7 +1218,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48f1bf68",
+   "id": "6118ef01",
    "metadata": {
     "hide-output": false
    },
@@ -1263,7 +1263,7 @@
   }
  ],
  "metadata": {
-  "date": 1745973983.061354,
+  "date": 1747018760.7231016,
   "filename": "arellano.md",
   "kernelspec": {
    "display_name": "Python",
