--- a/autodiff.ipynb
+++ b/autodiff.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "32fe413a",
+   "id": "c0a8b66b",
    "metadata": {},
    "source": [
     "# Adventures with Autodiff"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94da735b",
+   "id": "99a003f3",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf6522f6",
+   "id": "89c3c92b",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58a4dd80",
+   "id": "8bcf8cd7",
    "metadata": {
     "hide-output": false
    },
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df4f18a5",
+   "id": "0d10ef86",
    "metadata": {},
    "source": [
     "Checking for a GPU:"
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b9b1a5bf",
+   "id": "978f341f",
    "metadata": {
     "hide-output": false
    },
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f3b00dd",
+   "id": "a4726e06",
    "metadata": {},
    "source": [
     "## What is automatic differentiation?\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "961f3ee2",
+   "id": "a8178c6c",
    "metadata": {},
    "source": [
     "### Autodiff is not finite differences\n",
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb8f4084",
+   "id": "6041a76a",
    "metadata": {
     "hide-output": false
    },
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bfd55b00",
+   "id": "6e8c814a",
    "metadata": {},
    "source": [
     "This kind of numerical derivative is often inaccurate and unstable.\n",
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0dbd3b39",
+   "id": "200ee222",
    "metadata": {},
    "source": [
     "### Autodiff is not symbolic calculus\n",
@@ -180,7 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c8b7d62b",
+   "id": "4ffee508",
    "metadata": {
     "hide-output": false
    },
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a4693c13",
+   "id": "f483b2d7",
    "metadata": {},
    "source": [
     "Symbolic calculus is not well suited to high performance\n",
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e93132e9",
+   "id": "0d847442",
    "metadata": {},
    "source": [
     "### Autodiff\n",
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a300a39f",
+   "id": "67a91572",
    "metadata": {},
    "source": [
     "## Some experiments\n",
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f9e892a",
+   "id": "1b419d69",
    "metadata": {},
    "source": [
     "### A differentiable function\n",
@@ -256,7 +256,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85ee552c",
+   "id": "f7518422",
    "metadata": {
     "hide-output": false
    },
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "237088c6",
+   "id": "9b0dfa89",
    "metadata": {},
    "source": [
     "We use `grad` to compute the gradient of a real-valued function:"
@@ -277,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c513d18c",
+   "id": "8e0c3b1a",
    "metadata": {
     "hide-output": false
    },
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2cd02860",
+   "id": "1e38ebb1",
    "metadata": {},
    "source": [
     "Let’s plot the result:"
@@ -297,7 +297,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "860356b9",
+   "id": "3ad22048",
    "metadata": {
     "hide-output": false
    },
@@ -309,7 +309,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f111a8d",
+   "id": "8542f92f",
    "metadata": {
     "hide-output": false
    },
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff6ad68a",
+   "id": "3c724232",
    "metadata": {},
    "source": [
     "### Absolute value function\n",
@@ -335,7 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "315efac9",
+   "id": "bdb9f42d",
    "metadata": {
     "hide-output": false
    },
@@ -348,7 +348,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71d2fd47",
+   "id": "ede02db4",
    "metadata": {
     "hide-output": false
    },
@@ -360,7 +360,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c3f89e72",
+   "id": "8f831f58",
    "metadata": {
     "hide-output": false
    },
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7a807806",
+   "id": "dcf0540b",
    "metadata": {},
    "source": [
     "At the nondifferentiable point $ 0 $, `jax.grad` returns the right derivative:"
@@ -384,7 +384,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "192176ed",
+   "id": "15eac1df",
    "metadata": {
     "hide-output": false
    },
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0eec3250",
+   "id": "22a2b163",
    "metadata": {},
    "source": [
     "### Differentiating through control flow\n",
@@ -406,7 +406,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "393f216e",
+   "id": "5d9453e6",
    "metadata": {
     "hide-output": false
    },
@@ -427,7 +427,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b01bab60",
+   "id": "42cc5fa9",
    "metadata": {
     "hide-output": false
    },
@@ -439,7 +439,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ae10799",
+   "id": "1f18fc4c",
    "metadata": {
     "hide-output": false
    },
@@ -451,7 +451,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24e664ec",
+   "id": "0b65e8bb",
    "metadata": {
     "hide-output": false
    },
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6ce3791",
+   "id": "df85c725",
    "metadata": {},
    "source": [
     "### Differentiating through a linear interpolation\n",
@@ -477,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "802c3a9c",
+   "id": "51e7bd8f",
    "metadata": {
     "hide-output": false
    },
@@ -495,7 +495,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8763fc9e",
+   "id": "34007445",
    "metadata": {
     "hide-output": false
    },
@@ -507,7 +507,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "05b981c9",
+   "id": "0a39a2f5",
    "metadata": {
     "hide-output": false
    },
@@ -519,7 +519,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a127e2a8",
+   "id": "e36baa39",
    "metadata": {
     "hide-output": false
    },
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3b6f9b6",
+   "id": "c010797a",
    "metadata": {},
    "source": [
     "## Gradient Descent\n",
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b755f89",
+   "id": "ff0c48df",
    "metadata": {},
    "source": [
     "### A function for gradient descent\n",
@@ -555,7 +555,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0650b9c4",
+   "id": "d5a35cf7",
    "metadata": {
     "hide-output": false
    },
@@ -594,7 +594,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9da3538a",
+   "id": "25c0b19a",
    "metadata": {},
    "source": [
     "### Simulated data\n",
@@ -607,7 +607,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d0efef7",
+   "id": "3aff8f67",
    "metadata": {
     "hide-output": false
    },
@@ -627,7 +627,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1c18b710",
+   "id": "bfc0a2da",
    "metadata": {
     "hide-output": false
    },
@@ -640,7 +640,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6953d919",
+   "id": "6c16d225",
    "metadata": {},
    "source": [
     "Let’s start by calculating the estimated slope and intercept using closed form solutions."
@@ -649,7 +649,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d307780",
+   "id": "61703ed8",
    "metadata": {
     "hide-output": false
    },
@@ -664,7 +664,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b74a1b1d",
+   "id": "c3f88c82",
    "metadata": {
     "hide-output": false
    },
@@ -676,7 +676,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b231b58",
+   "id": "292b50df",
    "metadata": {
     "hide-output": false
    },
@@ -692,7 +692,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40744185",
+   "id": "5501d528",
    "metadata": {},
    "source": [
     "### Minimizing squared loss by gradient descent\n",
@@ -705,7 +705,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ef9a40e",
+   "id": "201ebeec",
    "metadata": {
     "hide-output": false
    },
@@ -720,7 +720,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3318bb30",
+   "id": "bb4c215f",
    "metadata": {},
    "source": [
     "Now we minimize it:"
@@ -729,7 +729,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea990342",
+   "id": "346b99fc",
    "metadata": {
     "hide-output": false
    },
@@ -742,7 +742,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ffe6053",
+   "id": "707a012f",
    "metadata": {},
    "source": [
     "Let’s plot the results."
@@ -751,7 +751,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a531b90",
+   "id": "cd1c0942",
    "metadata": {
     "hide-output": false
    },
@@ -768,7 +768,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "97c49323",
+   "id": "973bd86e",
    "metadata": {},
    "source": [
     "Notice that we get the same estimates as we did from the closed form solutions."
@@ -776,7 +776,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "acbc7696",
+   "id": "ff6b0815",
    "metadata": {},
    "source": [
     "### Adding a squared term\n",
@@ -789,7 +789,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "268e8e21",
+   "id": "fad16f65",
    "metadata": {
     "hide-output": false
    },
@@ -804,7 +804,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c05df48e",
+   "id": "a55b64c4",
    "metadata": {},
    "source": [
     "Now we’re minimizing in three dimensions.\n",
@@ -815,7 +815,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d3c3963",
+   "id": "44730dae",
    "metadata": {
     "hide-output": false
    },
@@ -834,7 +834,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da48aa2d",
+   "id": "a29ed7f5",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -842,7 +842,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "893de9d2",
+   "id": "d3bb16d7",
    "metadata": {},
    "source": [
     "## Exercise 3.1\n",
@@ -872,7 +872,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b514ce8e",
+   "id": "c39ba080",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 3.1](https://jax.quantecon.org/#auto_ex1)\n",
@@ -883,7 +883,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d4717502",
+   "id": "d319988d",
    "metadata": {
     "hide-output": false
    },
@@ -897,7 +897,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb790338",
+   "id": "43f8486a",
    "metadata": {
     "hide-output": false
    },
@@ -918,7 +918,7 @@
   }
  ],
  "metadata": {
-  "date": 1745973983.0941887,
+  "date": 1747018760.755555,
   "filename": "autodiff.md",
   "kernelspec": {
    "display_name": "Python",
