--- a/inventory_ssd.ipynb
+++ b/inventory_ssd.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "aee7c909",
+   "id": "99d8f362",
    "metadata": {},
    "source": [
     "# Inventory Management Model"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a6af4bc",
+   "id": "8ef5afc3",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c7c805a3",
+   "id": "d8368d2c",
    "metadata": {
     "hide-output": false
    },
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4bd07496",
+   "id": "f4de9866",
    "metadata": {},
    "source": [
     "## A model with constant discounting\n",
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c98601f3",
+   "id": "3377f772",
    "metadata": {},
    "source": [
     "## Time varing discount rates\n",
@@ -193,7 +193,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c6c545da",
+   "id": "12c4aa5d",
    "metadata": {
     "hide-output": false
    },
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39292cb7",
+   "id": "4d2b1dbe",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -221,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d493177c",
+   "id": "e0005778",
    "metadata": {
     "hide-output": false
    },
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "81def70e",
+   "id": "1cdcc5ec",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase the precision."
@@ -241,7 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71fa8c7e",
+   "id": "93ae374f",
    "metadata": {
     "hide-output": false
    },
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2cf535a",
+   "id": "119c4aab",
    "metadata": {},
    "source": [
     "Let’s define a model to represent the inventory management."
@@ -261,7 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a3fcab16",
+   "id": "887a55b6",
    "metadata": {
     "hide-output": false
    },
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "609f7591",
+   "id": "87d7ccdb",
    "metadata": {},
    "source": [
     "We need the following successive approximation function."
@@ -282,7 +282,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9d45a067",
+   "id": "045c808e",
    "metadata": {
     "hide-output": false
    },
@@ -314,7 +314,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "198b94c0",
+   "id": "1a1c5a53",
    "metadata": {
     "hide-output": false
    },
@@ -328,7 +328,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0e1fc9b3",
+   "id": "74474ac4",
    "metadata": {
     "hide-output": false
    },
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eda7d25c",
+   "id": "80c1e96a",
    "metadata": {},
    "source": [
     "Let’s define a function to create an inventory model using the given parameters."
@@ -349,7 +349,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7be545a6",
+   "id": "c3d54a87",
    "metadata": {
     "hide-output": false
    },
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb5f8519",
+   "id": "89161f04",
    "metadata": {},
    "source": [
     "Here’s the function `B` on the right-hand side of the Bellman equation."
@@ -377,7 +377,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f84cf4f",
+   "id": "fb24e036",
    "metadata": {
     "hide-output": false
    },
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b5d13ac9",
+   "id": "77c8c4f2",
    "metadata": {},
    "source": [
     "We need to vectorize this function so that we can use it efficiently in JAX.\n",
@@ -413,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9a4e69ed",
+   "id": "774674d4",
    "metadata": {
     "hide-output": false
    },
@@ -425,7 +425,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0b73f524",
+   "id": "e43d63c2",
    "metadata": {
     "hide-output": false
    },
@@ -445,7 +445,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "240b046b",
+   "id": "f1538a21",
    "metadata": {
     "hide-output": false
    },
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "09fc1d84",
+   "id": "474389d0",
    "metadata": {},
    "source": [
     "Next we define the Bellman operator."
@@ -466,7 +466,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e689cdb1",
+   "id": "dc4ecc36",
    "metadata": {
     "hide-output": false
    },
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7327e721",
+   "id": "90c5fa42",
    "metadata": {},
    "source": [
     "The following function computes a v-greedy policy."
@@ -493,7 +493,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79c226ff",
+   "id": "e2274c39",
    "metadata": {
     "hide-output": false
    },
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6cfb228",
+   "id": "2425a00c",
    "metadata": {},
    "source": [
     "Here’s code to solve the model using value function iteration."
@@ -520,7 +520,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a9e87cdf",
+   "id": "46edddf1",
    "metadata": {
     "hide-output": false
    },
@@ -535,7 +535,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f4eab870",
+   "id": "c0d2b128",
    "metadata": {},
    "source": [
     "Now let’s create an instance and solve it."
@@ -544,7 +544,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "addb340f",
+   "id": "a88d2ae8",
    "metadata": {
     "hide-output": false
    },
@@ -559,7 +559,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e9c932e",
+   "id": "5f5ad219",
    "metadata": {
     "hide-output": false
    },
@@ -573,7 +573,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75a0a619",
+   "id": "2de3bd1c",
    "metadata": {},
    "source": [
     "Let’s run again to get rid of the compile time."
@@ -582,7 +582,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f23caba",
+   "id": "83caad9d",
    "metadata": {
     "hide-output": false
    },
@@ -597,7 +597,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2cf03cd1",
+   "id": "1052f249",
    "metadata": {
     "hide-output": false
    },
@@ -609,7 +609,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a1de5516",
+   "id": "a687c880",
    "metadata": {
     "hide-output": false
    },
@@ -630,7 +630,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7239dd51",
+   "id": "1707b1e4",
    "metadata": {
     "hide-output": false
    },
@@ -663,7 +663,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "07aac64a",
+   "id": "519472d2",
    "metadata": {
     "hide-output": false
    },
@@ -674,7 +674,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f7dec0dc",
+   "id": "c7c2fff3",
    "metadata": {},
    "source": [
     "## Numba implementation\n",
@@ -685,7 +685,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60f0a15a",
+   "id": "febcf75e",
    "metadata": {
     "hide-output": false
    },
@@ -749,7 +749,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d4912566",
+   "id": "38660e3b",
    "metadata": {
     "hide-output": false
    },
@@ -764,7 +764,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a639f702",
+   "id": "bf61003c",
    "metadata": {
     "hide-output": false
    },
@@ -778,7 +778,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e516b39",
+   "id": "765637ef",
    "metadata": {},
    "source": [
     "Let’s run again to eliminate the compile time."
@@ -787,7 +787,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72829c85",
+   "id": "cc045c1f",
    "metadata": {
     "hide-output": false
    },
@@ -801,7 +801,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17a292f5",
+   "id": "66e214eb",
    "metadata": {},
    "source": [
     "Let’s verify that the Numba and JAX implementations converge to the same solution."
@@ -810,7 +810,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "581b56eb",
+   "id": "368bf725",
    "metadata": {
     "hide-output": false
    },
@@ -821,7 +821,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "218810b0",
+   "id": "fe02711c",
    "metadata": {},
    "source": [
     "Here’s the speed comparison."
@@ -830,7 +830,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5633e1a8",
+   "id": "f18daefe",
    "metadata": {
     "hide-output": false
    },
@@ -843,7 +843,7 @@
   }
  ],
  "metadata": {
-  "date": 1745973983.252868,
+  "date": 1747018760.9125538,
   "filename": "inventory_ssd.md",
   "kernelspec": {
    "display_name": "Python",
