--- a/job_search.ipynb
+++ b/job_search.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6d26d67b",
+   "id": "eee86d54",
    "metadata": {},
    "source": [
     "# Job Search"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e86dc6f",
+   "id": "e7e5429d",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25721ec7",
+   "id": "3dc2a80e",
    "metadata": {
     "hide-output": false
    },
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c67d7e16",
+   "id": "621c26b3",
    "metadata": {},
    "source": [
     "We use the following imports."
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dbbebed4",
+   "id": "5bfee56a",
    "metadata": {
     "hide-output": false
    },
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c282558",
+   "id": "d1332b0b",
    "metadata": {},
    "source": [
     "## Model\n",
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44b0d269",
+   "id": "046e4909",
    "metadata": {},
    "source": [
     "### Set up\n",
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11b36c19",
+   "id": "0a4e91fd",
    "metadata": {},
    "source": [
     "### Rewards\n",
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd0e169a",
+   "id": "0df6043c",
    "metadata": {},
    "source": [
     "## Code\n",
@@ -148,7 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d325d6e",
+   "id": "56345412",
    "metadata": {
     "hide-output": false
    },
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ad5ff4a",
+   "id": "de69ca5a",
    "metadata": {},
    "source": [
     "The function below holds default values and populates the `namedtuple`."
@@ -168,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17c4fd23",
+   "id": "0ef2144a",
    "metadata": {
     "hide-output": false
    },
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e876210",
+   "id": "01f279ae",
    "metadata": {},
    "source": [
     "Let’s test it:"
@@ -198,7 +198,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fbd2cf8e",
+   "id": "1eceb006",
    "metadata": {
     "hide-output": false
    },
@@ -210,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed2f59ce",
+   "id": "b95059ae",
    "metadata": {
     "hide-output": false
    },
@@ -222,7 +222,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0b3799c8",
+   "id": "4b7528a3",
    "metadata": {
     "hide-output": false
    },
@@ -234,7 +234,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b2b5c6a2",
+   "id": "570b73e8",
    "metadata": {
     "hide-output": false
    },
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "78c4379a",
+   "id": "abb0a831",
    "metadata": {},
    "source": [
     "Here’s the Bellman operator."
@@ -254,7 +254,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "187825fe",
+   "id": "340d0789",
    "metadata": {
     "hide-output": false
    },
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a2eb2c5",
+   "id": "dbe995f2",
    "metadata": {},
    "source": [
     "The next function computes the optimal policy under the assumption that $ v $ is\n",
@@ -301,7 +301,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77f2dbd2",
+   "id": "db0b5151",
    "metadata": {
     "hide-output": false
    },
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f5af0c2",
+   "id": "bc15ab30",
    "metadata": {},
    "source": [
     "Here’s a routine for value function iteration."
@@ -328,7 +328,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff0c0a43",
+   "id": "eed10f8d",
    "metadata": {
     "hide-output": false
    },
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ece8e433",
+   "id": "c2909816",
    "metadata": {},
    "source": [
     "## Computing the solution\n",
@@ -365,7 +365,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b08e79e9",
+   "id": "dc73a785",
    "metadata": {
     "hide-output": false
    },
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01c3c8e1",
+   "id": "496b8ed8",
    "metadata": {},
    "source": [
     "Here’s the optimal policy:"
@@ -388,7 +388,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a3214a7e",
+   "id": "1750abbd",
    "metadata": {
     "hide-output": false
    },
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "05f5e1a2",
+   "id": "8b5551f8",
    "metadata": {},
    "source": [
     "We compute the reservation wage as the first $ w $ such that $ \\sigma(w)=1 $."
@@ -412,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61e096d2",
+   "id": "c9f36441",
    "metadata": {
     "hide-output": false
    },
@@ -425,7 +425,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b7837a29",
+   "id": "91953cb1",
    "metadata": {
     "hide-output": false
    },
@@ -437,7 +437,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ba9e6d3",
+   "id": "1b566519",
    "metadata": {
     "hide-output": false
    },
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "59e2a27c",
+   "id": "2b2239c5",
    "metadata": {},
    "source": [
     "Here’s a joint plot of the value function and the reservation wage."
@@ -457,7 +457,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b8236568",
+   "id": "2cd24103",
    "metadata": {
     "hide-output": false
    },
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dcbc3909",
+   "id": "e1408e7c",
    "metadata": {},
    "source": [
     "## Exercise"
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e08515f",
+   "id": "d3b628e4",
    "metadata": {},
    "source": [
     "## Exercise 10.1\n",
@@ -517,7 +517,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b1f84143",
+   "id": "8057b762",
    "metadata": {
     "hide-output": false
    },
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52e19ab9",
+   "id": "94e10b1c",
    "metadata": {},
    "source": [
     "Now you need to modify `T` and `get_greedy` and then run value function iteration again."
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "43bb982e",
+   "id": "4b8de8a6",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 10.1](https://jax.quantecon.org/#job_search_1)"
@@ -559,7 +559,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f7ec92ba",
+   "id": "c9c6cb94",
    "metadata": {
     "hide-output": false
    },
@@ -638,7 +638,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a47c4dc3",
+   "id": "808c9b3f",
    "metadata": {},
    "source": [
     "Let’s plot the results together with the original risk neutral case and see what we get."
@@ -647,7 +647,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df6a3f21",
+   "id": "efc8c904",
    "metadata": {
     "hide-output": false
    },
@@ -661,7 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90263573",
+   "id": "4118107e",
    "metadata": {
     "hide-output": false
    },
@@ -681,7 +681,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b7ae2e6",
+   "id": "0208387a",
    "metadata": {},
    "source": [
     "The figure shows that the reservation wage under risk sensitive preferences (RS $ \\bar w $) shifts down.\n",
@@ -692,7 +692,7 @@
   }
  ],
  "metadata": {
-  "date": 1745973983.3807964,
+  "date": 1747018761.040549,
   "filename": "job_search.md",
   "kernelspec": {
    "display_name": "Python",
