--- a/keras.ipynb
+++ b/keras.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f863fdbc",
+   "id": "a4fcf155",
    "metadata": {},
    "source": [
     "# Simple Neural Network Regression with Keras and JAX"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "513d42c5",
+   "id": "1a439e80",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c1f43c03",
+   "id": "fd681012",
    "metadata": {
     "hide-output": false
    },
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e139937",
+   "id": "8fa74fcc",
    "metadata": {},
    "source": [
     "Let’s install Keras."
@@ -66,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30894362",
+   "id": "b8452a0c",
    "metadata": {
     "hide-output": false
    },
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bef2ba22",
+   "id": "fccb31d8",
    "metadata": {},
    "source": [
     "Now we specify that the desired backend is JAX."
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1b76e235",
+   "id": "0c60e836",
    "metadata": {
     "hide-output": false
    },
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5805f921",
+   "id": "4d2fd7dc",
    "metadata": {},
    "source": [
     "Now we should be able to import some tools from Keras.\n",
@@ -109,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e7488a04",
+   "id": "e512e492",
    "metadata": {
     "hide-output": false
    },
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ca3d763",
+   "id": "d91d8305",
    "metadata": {},
    "source": [
     "## Data\n",
@@ -150,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5036a8ec",
+   "id": "574df7cf",
    "metadata": {
     "hide-output": false
    },
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fcbaafe9",
+   "id": "cdf3163a",
    "metadata": {},
    "source": [
     "Now we generate some data to train the model."
@@ -181,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93dbecaa",
+   "id": "9f2f5820",
    "metadata": {
     "hide-output": false
    },
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15e686e5",
+   "id": "ec9f80f0",
    "metadata": {},
    "source": [
     "Here’s a plot of the training data."
@@ -201,7 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "228bcf09",
+   "id": "6456f3e1",
    "metadata": {
     "hide-output": false
    },
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a18bc520",
+   "id": "e1db0922",
    "metadata": {},
    "source": [
     "We’ll also use data from the same process for cross-validation."
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d737b01a",
+   "id": "08b39304",
    "metadata": {
     "hide-output": false
    },
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "065f36a9",
+   "id": "3833d39c",
    "metadata": {},
    "source": [
     "## Models\n",
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f9534ea",
+   "id": "a69414dc",
    "metadata": {},
    "source": [
     "## Regression model\n",
@@ -263,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "041d3f0f",
+   "id": "f29c30f0",
    "metadata": {
     "hide-output": false
    },
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f492c100",
+   "id": "0da73801",
    "metadata": {},
    "source": [
     "In the function above you can see that\n",
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d679c625",
+   "id": "a45738a7",
    "metadata": {},
    "source": [
     "### Deep Network\n",
@@ -310,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "972651ee",
+   "id": "7add2e38",
    "metadata": {
     "hide-output": false
    },
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd57c949",
+   "id": "92df02a7",
    "metadata": {},
    "source": [
     "### Tracking errors\n",
@@ -347,7 +347,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c3310f6",
+   "id": "c57bc73c",
    "metadata": {
     "hide-output": false
    },
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c1cf122",
+   "id": "ad141a88",
    "metadata": {},
    "source": [
     "## Training\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c7da230",
+   "id": "7f392a0f",
    "metadata": {},
    "source": [
     "### Linear regression\n",
@@ -392,7 +392,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a42e14e",
+   "id": "fd8940b4",
    "metadata": {
     "hide-output": false
    },
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc26741b",
+   "id": "127d7e06",
    "metadata": {},
    "source": [
     "Now we train the model using the training data."
@@ -412,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cbf7cd67",
+   "id": "cdfe75fc",
    "metadata": {
     "hide-output": false
    },
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "071e89c2",
+   "id": "9bd9b2d6",
    "metadata": {},
    "source": [
     "Let’s have a look at the evolution of MSE as the model is trained."
@@ -434,7 +434,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9bcc5c56",
+   "id": "b29519e1",
    "metadata": {
     "hide-output": false
    },
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3ecd303",
+   "id": "db9ef1f1",
    "metadata": {},
    "source": [
     "Let’s print the final MSE on the cross-validation data."
@@ -456,7 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9854c85c",
+   "id": "b4096e3b",
    "metadata": {
     "hide-output": false
    },
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1389519d",
+   "id": "fad29b90",
    "metadata": {},
    "source": [
     "Here’s our output predictions on the cross-validation data."
@@ -477,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cdca6a46",
+   "id": "943a8e9d",
    "metadata": {
     "hide-output": false
    },
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0badb43c",
+   "id": "348eb963",
    "metadata": {},
    "source": [
     "We use the following function to plot our predictions along with the data."
@@ -497,7 +497,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92c3d497",
+   "id": "a183c29d",
    "metadata": {
     "hide-output": false
    },
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2d939ed",
+   "id": "24542a39",
    "metadata": {},
    "source": [
     "Let’s now call the function on the cross-validation data."
@@ -521,7 +521,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "847d57fe",
+   "id": "f258d317",
    "metadata": {
     "hide-output": false
    },
@@ -534,7 +534,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7e7cfd5",
+   "id": "833a0630",
    "metadata": {},
    "source": [
     "### Deep learning\n",
@@ -547,7 +547,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c369f13",
+   "id": "f733f9b0",
    "metadata": {
     "hide-output": false
    },
@@ -559,7 +559,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9f1f9dbe",
+   "id": "aba0db5c",
    "metadata": {
     "hide-output": false
    },
@@ -573,7 +573,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5a4c1039",
+   "id": "9e8462cd",
    "metadata": {
     "hide-output": false
    },
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6819c0e0",
+   "id": "f7617946",
    "metadata": {},
    "source": [
     "Here’s the final MSE for the deep learning model."
@@ -595,7 +595,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5d7e7431",
+   "id": "a76bb1cf",
    "metadata": {
     "hide-output": false
    },
@@ -607,7 +607,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2661eebb",
+   "id": "0893fbd8",
    "metadata": {},
    "source": [
     "You will notice that this loss is much lower than the one we achieved with\n",
@@ -619,7 +619,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0dc6b71e",
+   "id": "030bbed9",
    "metadata": {
     "hide-output": false
    },
@@ -631,7 +631,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "723da68a",
+   "id": "7c66e9a2",
    "metadata": {
     "hide-output": false
    },
@@ -647,7 +647,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0cf310f7",
+   "id": "f41cd3d2",
    "metadata": {
     "hide-output": false
    },
@@ -660,7 +660,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a1c5e0f4",
+   "id": "9485d003",
    "metadata": {},
    "source": [
     "Not surprisingly, the multilayer neural network does a much better job of fitting the data.\n",
@@ -670,7 +670,7 @@
   }
  ],
  "metadata": {
-  "date": 1745973983.4055753,
+  "date": 1747018761.065175,
   "filename": "keras.md",
   "kernelspec": {
    "display_name": "Python",
