--- a/hopenhayn.ipynb
+++ b/hopenhayn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "af15e623",
+   "id": "944b5298",
    "metadata": {},
    "source": [
     "# The Hopenhayn Entry-Exit Model"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "348750de",
+   "id": "b47b7d64",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc382126",
+   "id": "865a61c5",
    "metadata": {},
    "source": [
     "## Outline\n",
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19f836c3",
+   "id": "e3bad19d",
    "metadata": {
     "hide-output": false
    },
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "119ad1ce",
+   "id": "48f7ec91",
    "metadata": {},
    "source": [
     "We will use the following imports."
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f13decfd",
+   "id": "a69e9b15",
    "metadata": {
     "hide-output": false
    },
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8bdb6f53",
+   "id": "f29a2f6b",
    "metadata": {},
    "source": [
     "## The Model"
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2bb4c5fc",
+   "id": "34901246",
    "metadata": {},
    "source": [
     "### Environment\n",
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2cb29b2e",
+   "id": "17152013",
    "metadata": {},
    "source": [
     "### Firm decisions\n",
@@ -175,7 +175,7 @@
     "The firm makes their stop-continue choice by first solving for the value function, which is the unique solution in a class of continuous functions $ \\mathscr C $ (details omitted) to\n",
     "\n",
     "\n",
-    "<a id='equation-99108008-57ea-4b8c-841e-32e8d65268f6'></a>\n",
+    "<a id='equation-a8bbd804-1aed-4416-bc9d-ac618a1295b5'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    v(\\varphi, p) = \\pi(\\varphi, p) + \\beta \n",
@@ -188,7 +188,7 @@
     "Given $ \\bar v $, we let $ \\bar \\varphi $ be the exit threshold function defined by\n",
     "\n",
     "\n",
-    "<a id='equation-d2287ff5-9c46-4580-920c-09a61985c8e5'></a>\n",
+    "<a id='equation-75649359-96ad-44a8-959c-acfb3ccd37ab'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\bar \\varphi(p) := \n",
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "268f508a",
+   "id": "80f63df5",
    "metadata": {},
    "source": [
     "### Equilibrium\n",
@@ -242,7 +242,7 @@
     "distribution of firms over productivity levels, such that the goods market clears, or\n",
     "\n",
     "\n",
-    "<a id='equation-f1a62aa8-25c3-4b86-a0ba-d07fbb35947b'></a>\n",
+    "<a id='equation-1937494b-5548-44eb-84fd-fa8b28ffe4b9'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\int q( \\varphi, p) \\mu(d \\varphi) = D(p),\n",
@@ -252,7 +252,7 @@
     "the *invariance condition* over the firm distribution\n",
     "\n",
     "\n",
-    "<a id='equation-2fb35dd4-b6e9-4d5e-9e1a-e3932fba8d76'></a>\n",
+    "<a id='equation-5014db7d-8afe-47c4-8fb4-f4dd8162ef1e'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\mu (B) \n",
@@ -266,7 +266,7 @@
     "holds (see below for intuition), the *equilibrium entry condition*\n",
     "\n",
     "\n",
-    "<a id='equation-df087544-09be-4e17-8486-27bd70e1e647'></a>\n",
+    "<a id='equation-e1bad809-029a-470c-8798-ceada4440271'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\int \\bar v( \\varphi, p) \\, \\gamma(d \\varphi) = c_e\n",
@@ -276,7 +276,7 @@
     "holds, and the *balanced entry and exit condition*\n",
     "\n",
     "\n",
-    "<a id='equation-62ee3e3b-3fca-4d76-b90b-0cc9ade43344'></a>\n",
+    "<a id='equation-b12bcd00-b316-4d2e-8757-587bd8d90be0'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    M = \\mu \\{ \\varphi < \\bar \\varphi(p) \\}\n",
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "87526daf",
+   "id": "84d80d78",
    "metadata": {},
    "source": [
     "### Computing equilibrium\n",
@@ -301,7 +301,7 @@
     "exit into the time invariance condition, yielding\n",
     "\n",
     "\n",
-    "<a id='equation-4475e3b7-b1da-4a56-b799-6665894cdc82'></a>\n",
+    "<a id='equation-31eaa78b-18a2-4b9b-a786-0898a4f2ddb0'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\mu (B) \n",
@@ -313,7 +313,7 @@
     "where $ \\Pi $ is the transition kernel on $ \\mathbb R_+ $ defined by\n",
     "\n",
     "\n",
-    "<a id='equation-42e96999-e684-4b55-8b91-ce06ed81b2cb'></a>\n",
+    "<a id='equation-126c5b61-0d15-4d70-94d6-8e524f6d0fd3'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\Pi(\\varphi, B) \n",
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a703c580",
+   "id": "f0a72d6d",
    "metadata": {},
    "source": [
     "### Specification of dynamics\n",
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "84d9252b",
+   "id": "71a5f016",
    "metadata": {},
    "source": [
     "## Code\n",
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6c2f54b7",
+   "id": "de6f10c5",
    "metadata": {
     "hide-output": false
    },
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "789cb680",
+   "id": "e0b17832",
    "metadata": {},
    "source": [
     "We store the parameters, grids and Monte Carlo draws in a `namedtuple`."
@@ -406,7 +406,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fbe85991",
+   "id": "35887331",
    "metadata": {
     "hide-output": false
    },
@@ -427,7 +427,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "02cb26fb",
+   "id": "8120c08c",
    "metadata": {
     "hide-output": false
    },
@@ -442,7 +442,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "686351e0",
+   "id": "6e0b1dd2",
    "metadata": {
     "hide-output": false
    },
@@ -456,7 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2afecf7a",
+   "id": "6ecc8370",
    "metadata": {
     "hide-output": false
    },
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d3d299e",
+   "id": "7fc9e5a5",
    "metadata": {},
    "source": [
     "Let us write down functions for profits and output."
@@ -507,7 +507,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1facb960",
+   "id": "e958d27e",
    "metadata": {
     "hide-output": false
    },
@@ -525,7 +525,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6d0ee1ac",
+   "id": "0c2df88c",
    "metadata": {
     "hide-output": false
    },
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c25ff31",
+   "id": "d2937017",
    "metadata": {},
    "source": [
     "Let’s write code to simulate a cross-section of firms given a particular value for the exit threshold (rather than an exit threshold function).\n",
@@ -555,7 +555,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ba83359",
+   "id": "b13d1b87",
    "metadata": {
     "hide-output": false
    },
@@ -574,7 +574,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "722f24f5",
+   "id": "41a4b244",
    "metadata": {
     "hide-output": false
    },
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "812e40a1",
+   "id": "5a388f07",
    "metadata": {},
    "source": [
     "Our next function runs the cross-section forward in time `sim_length` periods."
@@ -594,7 +594,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "778f346d",
+   "id": "9fb32c5d",
    "metadata": {
     "hide-output": false
    },
@@ -618,7 +618,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74b0f423",
+   "id": "7a8fe6f5",
    "metadata": {},
    "source": [
     "Here’s a utility function to compute the expected value\n",
@@ -633,7 +633,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5d9aabdb",
+   "id": "bc8e0170",
    "metadata": {
     "hide-output": false
    },
@@ -659,7 +659,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e373dca",
+   "id": "e3db6df5",
    "metadata": {},
    "source": [
     "Now let’s vectorize this function in $ \\varphi $ and then write another function that computes the expected value across all $ \\varphi $ in `φ_grid`"
@@ -668,7 +668,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "776df861",
+   "id": "4c293f8f",
    "metadata": {
     "hide-output": false
    },
@@ -680,7 +680,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b120a4de",
+   "id": "48056b87",
    "metadata": {
     "hide-output": false
    },
@@ -701,7 +701,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "afebd8de",
+   "id": "d4f8983f",
    "metadata": {},
    "source": [
     "Here is the Bellman operator $ T $."
@@ -710,7 +710,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37ba0d2d",
+   "id": "2d6d46e1",
    "metadata": {
     "hide-output": false
    },
@@ -729,7 +729,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb40a344",
+   "id": "d73925ae",
    "metadata": {},
    "source": [
     "The next function takes $ v, p $ as inputs and, conditional on the value function\n",
@@ -739,7 +739,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f03f7fe9",
+   "id": "13d1df7c",
    "metadata": {
     "hide-output": false
    },
@@ -758,7 +758,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e54b41b5",
+   "id": "c7866aa6",
    "metadata": {},
    "source": [
     "We use value function iteration (VFI) to compute the value function $ \\bar v(\\cdot, p) $, taking $ p $ as given.\n",
@@ -769,7 +769,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac8e12ee",
+   "id": "c38b8ea6",
    "metadata": {
     "hide-output": false
    },
@@ -804,7 +804,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f53b8bc0",
+   "id": "66065625",
    "metadata": {
     "hide-output": false
    },
@@ -831,7 +831,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e73054cf",
+   "id": "3b56b73f",
    "metadata": {},
    "source": [
     "We need to solve for the equilibrium price, which is the $ p $ satisfying\n",
@@ -850,7 +850,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64004f8f",
+   "id": "33abf30e",
    "metadata": {
     "hide-output": false
    },
@@ -884,7 +884,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27a11149",
+   "id": "ef3540da",
    "metadata": {},
    "source": [
     "We are now ready to compute all elements of the stationary recursive equilibrium."
@@ -893,7 +893,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7434d0e3",
+   "id": "96030aeb",
    "metadata": {
     "hide-output": false
    },
@@ -930,7 +930,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0227da0b",
+   "id": "4cdb262a",
    "metadata": {},
    "source": [
     "## Solving the model"
@@ -938,7 +938,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b327b7fc",
+   "id": "0d0d0e84",
    "metadata": {},
    "source": [
     "### Preliminary calculations\n",
@@ -949,7 +949,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94ac7351",
+   "id": "2f7c1931",
    "metadata": {
     "hide-output": false
    },
@@ -961,7 +961,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "583da103",
+   "id": "e9dee85b",
    "metadata": {},
    "source": [
     "Let’s see how long it takes to compute the value function at a given price\n",
@@ -971,7 +971,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f63ac212",
+   "id": "3910151c",
    "metadata": {
     "hide-output": false
    },
@@ -984,7 +984,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a61ba5ca",
+   "id": "11542329",
    "metadata": {},
    "source": [
     "Let’s run the code again to eliminate compile time."
@@ -993,7 +993,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a789cfe6",
+   "id": "ace3cc09",
    "metadata": {
     "hide-output": false
    },
@@ -1004,7 +1004,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "83d7ded3",
+   "id": "80362fb7",
    "metadata": {},
    "source": [
     "Let’s have a look at the net entry value as a function of price\n",
@@ -1015,7 +1015,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c9ad822b",
+   "id": "e9044a62",
    "metadata": {
     "hide-output": false
    },
@@ -1039,7 +1039,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1286780c",
+   "id": "d478099c",
    "metadata": {},
    "source": [
     "Below we solve for the zero of this function to calculate $ p* $.\n",
@@ -1049,7 +1049,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aed792ab",
+   "id": "80e80f18",
    "metadata": {},
    "source": [
     "### Computing the equilibrium\n",
@@ -1060,7 +1060,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5d7c528d",
+   "id": "ac45d6d2",
    "metadata": {
     "hide-output": false
    },
@@ -1073,7 +1073,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "754cecf3",
+   "id": "1f9d2c2f",
    "metadata": {},
    "source": [
     "Let’s run the code again to get rid of compile time."
@@ -1082,7 +1082,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9bb8cc15",
+   "id": "b750bdee",
    "metadata": {
     "hide-output": false
    },
@@ -1095,7 +1095,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52b5c2d9",
+   "id": "d3a131f3",
    "metadata": {},
    "source": [
     "Let’s check that $ p^* $ is close to 1.5"
@@ -1104,7 +1104,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3634f6d2",
+   "id": "10a2c605",
    "metadata": {
     "hide-output": false
    },
@@ -1115,7 +1115,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bafac20f",
+   "id": "b8c59d59",
    "metadata": {},
    "source": [
     "Here is a plot of the value function $ \\bar v(\\cdot, p^*) $."
@@ -1124,7 +1124,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c7361e7",
+   "id": "a8057b76",
    "metadata": {
     "hide-output": false
    },
@@ -1140,7 +1140,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b772d945",
+   "id": "248bb31b",
    "metadata": {},
    "source": [
     "Let’s have a look at the firm size distribution, with firm size measured by output."
@@ -1149,7 +1149,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f227b869",
+   "id": "3f9ece33",
    "metadata": {
     "hide-output": false
    },
@@ -1161,7 +1161,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c18da966",
+   "id": "42fe47a0",
    "metadata": {
     "hide-output": false
    },
@@ -1178,7 +1178,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ec5dcac",
+   "id": "585c1cd6",
    "metadata": {},
    "source": [
     "## Pareto tails\n",
@@ -1229,7 +1229,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d037f434",
+   "id": "58d7ff8c",
    "metadata": {
     "hide-output": false
    },
@@ -1246,7 +1246,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef9dc202",
+   "id": "38fafa11",
    "metadata": {},
    "source": [
     "Let’s plot the empirical counter CDF of the output distribution."
@@ -1255,7 +1255,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9d31d9df",
+   "id": "0e9bbae9",
    "metadata": {
     "hide-output": false
    },
@@ -1276,7 +1276,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "88f85505",
+   "id": "cb51e61a",
    "metadata": {},
    "source": [
     "## Exercise"
@@ -1284,7 +1284,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03307ace",
+   "id": "5ed680b8",
    "metadata": {},
    "source": [
     "## Exercise 19.1\n",
@@ -1299,7 +1299,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3feb8cae",
+   "id": "400d4e88",
    "metadata": {
     "hide-output": false
    },
@@ -1316,7 +1316,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f814cdf4",
+   "id": "32ab8226",
    "metadata": {},
    "source": [
     "This plot is not linear — as expected, since we are using a folded normal distribution."
@@ -1324,7 +1324,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab1a85ef",
+   "id": "d37547f0",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 19.1](https://jax.quantecon.org/#hopen_ex1)"
@@ -1333,7 +1333,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0224a020",
+   "id": "6301b996",
    "metadata": {
     "hide-output": false
    },
@@ -1349,7 +1349,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0363a59c",
+   "id": "26965fe5",
    "metadata": {},
    "source": [
     "This looks very linear — the model generates Pareto tails.\n",
@@ -1359,7 +1359,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "06edb148",
+   "id": "2b2afeee",
    "metadata": {},
    "source": [
     "## Exercise 19.2\n",
@@ -1374,7 +1374,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a674c730",
+   "id": "97575fdd",
    "metadata": {
     "hide-output": false
    },
@@ -1385,7 +1385,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "678db141",
+   "id": "ebf7ec60",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 19.2](https://jax.quantecon.org/#hopen_ex2)"
@@ -1394,7 +1394,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e67ded6d",
+   "id": "85a415ce",
    "metadata": {
     "hide-output": false
    },
@@ -1418,7 +1418,7 @@
   }
  ],
  "metadata": {
-  "date": 1745973983.142015,
+  "date": 1747018760.8026636,
   "filename": "hopenhayn.md",
   "kernelspec": {
    "display_name": "Python",
