--- a/lucas_model.ipynb
+++ b/lucas_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "757fa287",
+   "id": "3a18da6f",
    "metadata": {},
    "source": [
     "\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c5b7d558",
+   "id": "b2096f55",
    "metadata": {},
    "source": [
     "# Asset Pricing: The Lucas Asset Pricing Model"
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb658e23",
+   "id": "6923b32e",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f648d68a",
+   "id": "3d135a31",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34f5db6c",
+   "id": "489b1301",
    "metadata": {
     "hide-output": false
    },
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc13fa50",
+   "id": "d98cda26",
    "metadata": {},
    "source": [
     "## The Lucas Model\n",
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6bc4a177",
+   "id": "8bedcd52",
    "metadata": {},
    "source": [
     "### Basic Setup\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8990bbc6",
+   "id": "81420e82",
    "metadata": {},
    "source": [
     "#### Assets\n",
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f910ec72",
+   "id": "0e75fab7",
    "metadata": {},
    "source": [
     "#### Consumers\n",
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40a60cca",
+   "id": "68911450",
    "metadata": {},
    "source": [
     "### Pricing a Lucas Tree\n",
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "941f6a27",
+   "id": "5c5d4afa",
    "metadata": {},
    "source": [
     "#### The Dynamic Program\n",
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f52baa6",
+   "id": "7c62d5c6",
    "metadata": {},
    "source": [
     "#### Next Steps\n",
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0bd04a85",
+   "id": "37f9b6fe",
    "metadata": {},
    "source": [
     "#### Equilibrium Constraints\n",
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41d90c5e",
+   "id": "2554f33b",
    "metadata": {},
    "source": [
     "#### The Equilibrium Price Function\n",
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea07e8e9",
+   "id": "d7e24c82",
    "metadata": {},
    "source": [
     "### Solving the Model\n",
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "682d57fd",
+   "id": "2f123949",
    "metadata": {},
    "source": [
     "#### Setting up the Problem\n",
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "066fded9",
+   "id": "67d757d8",
    "metadata": {},
    "source": [
     "#### A Little Fixed Point Theory\n",
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d745bf4d",
+   "id": "198272d2",
    "metadata": {},
    "source": [
     "## Computation\n",
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa2e72f4",
+   "id": "62bf2dac",
    "metadata": {},
    "source": [
     "### Numba Code\n",
@@ -523,7 +523,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "062f703c",
+   "id": "83e344a9",
    "metadata": {
     "hide-output": false
    },
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "399e55e2",
+   "id": "4739fe5e",
    "metadata": {},
    "source": [
     "Here’s a Numba-jitted version of the Lucas operator"
@@ -566,7 +566,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39b5891f",
+   "id": "4a6eb81e",
    "metadata": {
     "hide-output": false
    },
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56ab8e21",
+   "id": "b6e0c219",
    "metadata": {},
    "source": [
     "To solve the model, we write a function that iterates using the Lucas operator\n",
@@ -603,7 +603,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a9e088d3",
+   "id": "c800d871",
    "metadata": {
     "hide-output": false
    },
@@ -632,7 +632,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6db63f98",
+   "id": "075213e0",
    "metadata": {},
    "source": [
     "Let’s solve the model and plot the resulting price function"
@@ -641,7 +641,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "087b515b",
+   "id": "4fec62c6",
    "metadata": {
     "hide-output": false
    },
@@ -661,7 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94abe2ce",
+   "id": "1d3e4ad5",
    "metadata": {
     "hide-output": false
    },
@@ -677,7 +677,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0b5d0e15",
+   "id": "06de43fd",
    "metadata": {
     "hide-output": false
    },
@@ -693,7 +693,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "afe7636d",
+   "id": "047ee6ab",
    "metadata": {},
    "source": [
     "We see that the price is increasing, even if we remove all serial correlation\n",
@@ -706,7 +706,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7643f22",
+   "id": "aff76a6c",
    "metadata": {},
    "source": [
     "### JAX Code\n",
@@ -717,7 +717,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f639164c",
+   "id": "3abb50db",
    "metadata": {
     "hide-output": false
    },
@@ -749,7 +749,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e25e1a8",
+   "id": "785f447d",
    "metadata": {},
    "source": [
     "We’ll use the following function to simultaneously compute the expectation\n",
@@ -764,7 +764,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e87830c",
+   "id": "312b6974",
    "metadata": {
     "hide-output": false
    },
@@ -781,7 +781,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a93fa963",
+   "id": "06c4d75c",
    "metadata": {},
    "source": [
     "Here’s the Lucas operator"
@@ -790,7 +790,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ad4f613",
+   "id": "56dee8c4",
    "metadata": {
     "hide-output": false
    },
@@ -810,7 +810,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc610819",
+   "id": "c6f71c3f",
    "metadata": {},
    "source": [
     "We’ll use successive approximation to compute the fixed point."
@@ -819,7 +819,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87974eb4",
+   "id": "4a761a1d",
    "metadata": {
     "hide-output": false
    },
@@ -849,7 +849,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ba2ab4b",
+   "id": "5c007f5d",
    "metadata": {},
    "source": [
     "Here’s a function that solves the model"
@@ -858,7 +858,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dde6e586",
+   "id": "7b63d4b5",
    "metadata": {
     "hide-output": false
    },
@@ -884,7 +884,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1da61c01",
+   "id": "581629d7",
    "metadata": {},
    "source": [
     "Now let’s solve the model again and compare timing"
@@ -893,7 +893,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4499e977",
+   "id": "797aca55",
    "metadata": {
     "hide-output": false
    },
@@ -913,7 +913,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac6c61bc",
+   "id": "d818f1c6",
    "metadata": {
     "hide-output": false
    },
@@ -929,7 +929,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a629b874",
+   "id": "06da4067",
    "metadata": {},
    "source": [
     "Let’s check the solutions are similar"
@@ -938,7 +938,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d1b0847",
+   "id": "41cec623",
    "metadata": {
     "hide-output": false
    },
@@ -954,7 +954,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2261b3f5",
+   "id": "e5822296",
    "metadata": {},
    "source": [
     "## Exercises\n",
@@ -965,7 +965,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c2aac93c",
+   "id": "55dbb757",
    "metadata": {},
    "source": [
     "## Exercise 8.1\n",
@@ -977,7 +977,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79a0f314",
+   "id": "f6c7b989",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 8.1](https://jax.quantecon.org/#lucas_ex1)"
@@ -986,7 +986,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b97b7a2",
+   "id": "c7da360c",
    "metadata": {
     "hide-output": false
    },
@@ -1009,7 +1009,7 @@
   }
  ],
  "metadata": {
-  "date": 1745973983.599227,
+  "date": 1747018761.2571735,
   "filename": "lucas_model.md",
   "kernelspec": {
    "display_name": "Python",
