--- a/opt_savings_1.ipynb
+++ b/opt_savings_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1dd667c8",
+   "id": "a6ab3f50",
    "metadata": {},
    "source": [
     "# Optimal Savings I: Value Function Iteration"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2558410e",
+   "id": "d0aa6847",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ba4d5fd",
+   "id": "2ea9e25c",
    "metadata": {
     "hide-output": false
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "80b275c1",
+   "id": "1f1a1d68",
    "metadata": {},
    "source": [
     "We will use the following imports:"
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5fef2794",
+   "id": "50212b3d",
    "metadata": {
     "hide-output": false
    },
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1707ebfc",
+   "id": "70a8ea0c",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -73,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83f80cc1",
+   "id": "5049ef95",
    "metadata": {
     "hide-output": false
    },
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a4df9763",
+   "id": "b87b9719",
    "metadata": {},
    "source": [
     "We’ll use 64 bit floats to gain extra precision."
@@ -93,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "920bbf07",
+   "id": "c067c6ba",
    "metadata": {
     "hide-output": false
    },
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e1f77cb9",
+   "id": "b30b11bc",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "adfc0db8",
+   "id": "e4dedb7a",
    "metadata": {},
    "source": [
     "## Starting with NumPy\n",
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c65f704e",
+   "id": "f20eb83a",
    "metadata": {},
    "source": [
     "### Functions and operators\n",
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b9f56d5",
+   "id": "96e5bcf1",
    "metadata": {
     "hide-output": false
    },
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f376d22c",
+   "id": "eab953f4",
    "metadata": {},
    "source": [
     "(The function returns sizes of arrays because we use them later to help\n",
@@ -224,7 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ab0639f7",
+   "id": "a374fa5a",
    "metadata": {
     "hide-output": false
    },
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23c15fab",
+   "id": "ee81fda3",
    "metadata": {},
    "source": [
     "Here are two functions we need for value function iteration.\n",
@@ -276,7 +276,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13a2f5bd",
+   "id": "a64d5d57",
    "metadata": {
     "hide-output": false
    },
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44fceeae",
+   "id": "b527f76d",
    "metadata": {},
    "source": [
     "### Value function iteration\n",
@@ -304,7 +304,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5cd87524",
+   "id": "73927090",
    "metadata": {
     "hide-output": false
    },
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6afe579",
+   "id": "a933f85e",
    "metadata": {},
    "source": [
     "Now we create an instance, unpack it, and test how long it takes to solve the\n",
@@ -334,7 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "064e5657",
+   "id": "e72b6615",
    "metadata": {
     "hide-output": false
    },
@@ -351,7 +351,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6820c65d",
+   "id": "920bb2f2",
    "metadata": {
     "hide-output": false
    },
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a7961b7",
+   "id": "e6304ac6",
    "metadata": {},
    "source": [
     "Let’s run it again to eliminate compile time."
@@ -375,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43591a48",
+   "id": "ca33e2a6",
    "metadata": {
     "hide-output": false
    },
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b0254370",
+   "id": "3162044a",
    "metadata": {},
    "source": [
     "Here’s a plot of the policy function."
@@ -398,7 +398,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de336cf1",
+   "id": "468cea91",
    "metadata": {
     "hide-output": false
    },
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42787b0e",
+   "id": "c0a04269",
    "metadata": {},
    "source": [
     "## Switching to JAX\n",
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8372af0f",
+   "id": "6d5e4278",
    "metadata": {},
    "source": [
     "### Functions and operators\n",
@@ -439,7 +439,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4ebfa96",
+   "id": "f0387faa",
    "metadata": {
     "hide-output": false
    },
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c141dc9",
+   "id": "8fb51109",
    "metadata": {},
    "source": [
     "The right hand side of the Bellman equation is the same as the NumPy version\n",
@@ -475,7 +475,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28b77480",
+   "id": "e1593e1a",
    "metadata": {
     "hide-output": false
    },
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b0673941",
+   "id": "6a7fba9c",
    "metadata": {},
    "source": [
     "Some readers might be concerned that we are creating high dimensional arrays,\n",
@@ -528,7 +528,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2285b1a6",
+   "id": "3eca1bd7",
    "metadata": {
     "hide-output": false
    },
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b9dd4df",
+   "id": "82f5df7a",
    "metadata": {},
    "source": [
     "In the call above, we indicate to the compiler that `sizes` is static, so the\n",
@@ -551,7 +551,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b6aecae6",
+   "id": "b4f78f62",
    "metadata": {
     "hide-output": false
    },
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72b9f4e4",
+   "id": "aec81333",
    "metadata": {},
    "source": [
     "The next function computes a $ v $-greedy policy given $ v $ (i.e., the policy that\n",
@@ -576,7 +576,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "859bc45a",
+   "id": "1c8ae234",
    "metadata": {
     "hide-output": false
    },
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68cd7705",
+   "id": "20b3a998",
    "metadata": {},
    "source": [
     "### Successive approximation\n",
@@ -612,7 +612,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e57b1076",
+   "id": "995d0fc9",
    "metadata": {
     "hide-output": false
    },
@@ -642,7 +642,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "59c8b7e3",
+   "id": "31b4d3f8",
    "metadata": {},
    "source": [
     "Our value function iteration routine calls `successive_approx_jax` while passing\n",
@@ -652,7 +652,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "740322fb",
+   "id": "116a90f4",
    "metadata": {
     "hide-output": false
    },
@@ -668,7 +668,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a78ff1a",
+   "id": "e0385b5a",
    "metadata": {},
    "source": [
     "### Timing\n",
@@ -679,7 +679,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "813445f5",
+   "id": "1e0ecb76",
    "metadata": {
     "hide-output": false
    },
@@ -695,7 +695,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea9b6b57",
+   "id": "81886730",
    "metadata": {},
    "source": [
     "Let’s see how long it takes to solve this model."
@@ -704,7 +704,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87448cba",
+   "id": "13e49938",
    "metadata": {
     "hide-output": false
    },
@@ -719,7 +719,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2d2cd5c1",
+   "id": "8da4d8b1",
    "metadata": {},
    "source": [
     "Let’s run it again to eliminate compile time."
@@ -728,7 +728,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb12a795",
+   "id": "235902ac",
    "metadata": {
     "hide-output": false
    },
@@ -742,7 +742,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d3720c4c",
+   "id": "409716f6",
    "metadata": {},
    "source": [
     "The relative speed gain is"
@@ -751,7 +751,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "932ac960",
+   "id": "cc495e4b",
    "metadata": {
     "hide-output": false
    },
@@ -762,7 +762,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "740c5585",
+   "id": "46016f36",
    "metadata": {},
    "source": [
     "This is an impressive speed up and in fact we can do better still by switching\n",
@@ -773,7 +773,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1b67cc5",
+   "id": "e2bb4dbe",
    "metadata": {},
    "source": [
     "## Switching to vmap\n",
@@ -804,7 +804,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bafb0eb0",
+   "id": "f97e633e",
    "metadata": {
     "hide-output": false
    },
@@ -829,7 +829,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3cc4e190",
+   "id": "754eb8ff",
    "metadata": {},
    "source": [
     "Now we successively apply `vmap` to simulate nested loops."
@@ -838,7 +838,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e9b0065",
+   "id": "04613907",
    "metadata": {
     "hide-output": false
    },
@@ -851,7 +851,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07633bd5",
+   "id": "d26d085d",
    "metadata": {},
    "source": [
     "Here’s the Bellman operator and the `get_greedy` functions for the `vmap` case."
@@ -860,7 +860,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14a49ae8",
+   "id": "d5fa6f2e",
    "metadata": {
     "hide-output": false
    },
@@ -887,7 +887,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45070f36",
+   "id": "a29a2887",
    "metadata": {},
    "source": [
     "Here’s the iteration routine."
@@ -896,7 +896,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de3d1bb2",
+   "id": "b538527d",
    "metadata": {
     "hide-output": false
    },
@@ -912,7 +912,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07a221e6",
+   "id": "2dcba7d6",
    "metadata": {},
    "source": [
     "Let’s see how long it takes to solve the model using the `vmap` method."
@@ -921,7 +921,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c36659bf",
+   "id": "5f907d70",
    "metadata": {
     "hide-output": false
    },
@@ -936,7 +936,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc4ca847",
+   "id": "edcba770",
    "metadata": {},
    "source": [
     "Let’s run it again to get rid of compile time."
@@ -945,7 +945,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "112b4eb9",
+   "id": "a5d56ee3",
    "metadata": {
     "hide-output": false
    },
@@ -959,7 +959,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75d364d8",
+   "id": "81488d6c",
    "metadata": {},
    "source": [
     "We need to make sure that we got the same result."
@@ -968,7 +968,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f1e1d8a9",
+   "id": "de4bfd77",
    "metadata": {
     "hide-output": false
    },
@@ -980,7 +980,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2d398342",
+   "id": "57bb06ea",
    "metadata": {},
    "source": [
     "Here’s the speed gain associated with switching from the NumPy version to JAX with `vmap`:"
@@ -989,7 +989,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b52e52c6",
+   "id": "aa2cc5b1",
    "metadata": {
     "hide-output": false
    },
@@ -1000,7 +1000,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32667c69",
+   "id": "489f8cc7",
    "metadata": {},
    "source": [
     "And here’s the comparison with the first JAX implementation (which used direct vectorization)."
@@ -1009,7 +1009,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cabc281e",
+   "id": "449a0ff1",
    "metadata": {
     "hide-output": false
    },
@@ -1020,7 +1020,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "979c6339",
+   "id": "951d7b7e",
    "metadata": {},
    "source": [
     "The execution times for the two JAX versions are relatively similar.\n",
@@ -1032,7 +1032,7 @@
   }
  ],
  "metadata": {
-  "date": 1745973983.787438,
+  "date": 1747018761.4424806,
   "filename": "opt_savings_1.md",
   "kernelspec": {
    "display_name": "Python",
