--- a/overborrowing.ipynb
+++ b/overborrowing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "4870d4fc",
+   "id": "21440d5c",
    "metadata": {},
    "source": [
     "# Bianchi Overborrowing Model"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b53d4c14",
+   "id": "302d45b3",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f0b85f22",
+   "id": "021aeb9d",
    "metadata": {
     "hide-output": false
    },
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a86bcad",
+   "id": "a6903eaa",
    "metadata": {},
    "source": [
     "We use the following imports."
@@ -49,7 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ae5b69d",
+   "id": "27edcda1",
    "metadata": {
     "hide-output": false
    },
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab35552f",
+   "id": "25622349",
    "metadata": {},
    "source": [
     "## Markov dynamics\n",
@@ -94,7 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c94b7f51",
+   "id": "25bd9fe7",
    "metadata": {
     "hide-output": false
    },
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45c92e4c",
+   "id": "ee8a0190",
    "metadata": {},
    "source": [
     "We’ll store the data in $ \\Omega $ using its square root:"
@@ -120,7 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "06487262",
+   "id": "bde13bdb",
    "metadata": {
     "hide-output": false
    },
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f861ff51",
+   "id": "8ab2fda8",
    "metadata": {},
    "source": [
     "### Simulating the VAR\n",
@@ -143,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad4063d2",
+   "id": "3ae36b9b",
    "metadata": {
     "hide-output": false
    },
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff720949",
+   "id": "13ae663a",
    "metadata": {},
    "source": [
     "### Discretizing the VAR\n",
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0db6e41e",
+   "id": "2903e064",
    "metadata": {
     "hide-output": false
    },
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "029a8618",
+   "id": "0cbb798c",
    "metadata": {},
    "source": [
     "Here’s code for sampling from the Markov chain."
@@ -232,7 +232,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f4091c0",
+   "id": "f31e80e3",
    "metadata": {
     "hide-output": false
    },
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed2d5a1f",
+   "id": "50d4c54e",
    "metadata": {},
    "source": [
     "### Testing the discretization\n",
@@ -275,7 +275,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f7b19e04",
+   "id": "e7cac20c",
    "metadata": {
     "hide-output": false
    },
@@ -290,7 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ce403d5c",
+   "id": "ce0ac7ff",
    "metadata": {
     "hide-output": false
    },
@@ -308,7 +308,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ed6b106",
+   "id": "eb750830",
    "metadata": {
     "hide-output": false
    },
@@ -321,7 +321,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d84066d",
+   "id": "fa072872",
    "metadata": {
     "hide-output": false
    },
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a73a352c",
+   "id": "feb276a0",
    "metadata": {},
    "source": [
     "## Description of the model\n",
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f46b4da",
+   "id": "40695650",
    "metadata": {},
    "source": [
     "### Decentralized equilibrium\n",
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b6d84de7",
+   "id": "e58f0b7b",
    "metadata": {},
    "source": [
     "### Notation\n",
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df945a7f",
+   "id": "ff61768b",
    "metadata": {},
    "source": [
     "## Overborrowing model in Python / JAX\n",
@@ -539,7 +539,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "acb7305c",
+   "id": "5e8d3a26",
    "metadata": {
     "hide-output": false
    },
@@ -552,7 +552,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f311f86c",
+   "id": "5513fadd",
    "metadata": {
     "hide-output": false
    },
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e23bb5e",
+   "id": "3058c968",
    "metadata": {},
    "source": [
     "Default parameter values are from Bianchi.\n",
@@ -606,7 +606,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45e62a9a",
+   "id": "61065221",
    "metadata": {
     "hide-output": false
    },
@@ -629,7 +629,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b2027c05",
+   "id": "15f854ca",
    "metadata": {},
    "source": [
     "We need code to generate an initial guess of $ H $."
@@ -638,7 +638,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70ea1c89",
+   "id": "2d40339d",
    "metadata": {
     "hide-output": false
    },
@@ -660,7 +660,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c89177af",
+   "id": "20914dd2",
    "metadata": {},
    "source": [
     "We need to construct the Bellman operator for the household.\n",
@@ -671,7 +671,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f60dc86e",
+   "id": "ccce4adf",
    "metadata": {
     "hide-output": false
    },
@@ -711,7 +711,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61316183",
+   "id": "49cf5cc1",
    "metadata": {},
    "source": [
     "Let’s now vectorize and jit-compile this map."
@@ -720,7 +720,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "798b5265",
+   "id": "66762793",
    "metadata": {
     "hide-output": false
    },
@@ -741,7 +741,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f9a3439",
+   "id": "f5beac0d",
    "metadata": {},
    "source": [
     "Here’s a function that computes a greedy policy (best response to $ v $)."
@@ -750,7 +750,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12ad58d0",
+   "id": "5272a24f",
    "metadata": {
     "hide-output": false
    },
@@ -779,7 +779,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ecbba51",
+   "id": "ed249c11",
    "metadata": {},
    "source": [
     "Here’s the policy operator"
@@ -788,7 +788,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e4858cb4",
+   "id": "8be431ac",
    "metadata": {
     "hide-output": false
    },
@@ -823,7 +823,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bcd6348b",
+   "id": "9a8d63ad",
    "metadata": {
     "hide-output": false
    },
@@ -843,7 +843,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef641902",
+   "id": "ef0eee23",
    "metadata": {
     "hide-output": false
    },
@@ -866,7 +866,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42e682db",
+   "id": "2a42aeb2",
    "metadata": {
     "hide-output": false
    },
@@ -884,7 +884,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99bf86c9",
+   "id": "c8fafc7e",
    "metadata": {},
    "source": [
     "This is how we update our guess of $ H $, using the current policy $ b' $\n",
@@ -894,7 +894,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af0ee67b",
+   "id": "3166b0a7",
    "metadata": {
     "hide-output": false
    },
@@ -922,7 +922,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab824115",
+   "id": "43de47b5",
    "metadata": {},
    "source": [
     "Now we can write code to compute an equilibrium law of motion $ H $."
@@ -931,7 +931,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e8a35812",
+   "id": "98b29645",
    "metadata": {
     "hide-output": false
    },
@@ -965,7 +965,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ae8f48b",
+   "id": "8b99f111",
    "metadata": {},
    "source": [
     "## Planner problem\n",
@@ -1006,7 +1006,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2998af5e",
+   "id": "f4258ea0",
    "metadata": {
     "hide-output": false
    },
@@ -1042,7 +1042,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74bd6706",
+   "id": "c34645dc",
    "metadata": {
     "hide-output": false
    },
@@ -1061,7 +1061,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1cbbb9b5",
+   "id": "7bbcbd19",
    "metadata": {},
    "source": [
     "Now we construct the Bellman operator."
@@ -1070,7 +1070,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a2d6619f",
+   "id": "2d34572f",
    "metadata": {
     "hide-output": false
    },
@@ -1090,7 +1090,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2996d888",
+   "id": "d3360e70",
    "metadata": {},
    "source": [
     "Here’s a function that computes a greedy policy (best response to $ v $)."
@@ -1099,7 +1099,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47cd19e8",
+   "id": "fc30e659",
    "metadata": {
     "hide-output": false
    },
@@ -1120,7 +1120,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2fb1a2e0",
+   "id": "3740e087",
    "metadata": {
     "hide-output": false
    },
@@ -1152,7 +1152,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0a050de8",
+   "id": "0c388bc1",
    "metadata": {
     "hide-output": false
    },
@@ -1163,7 +1163,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1512e6d7",
+   "id": "4c0a794d",
    "metadata": {},
    "source": [
     "Computing the planner solution is straightforward value function iteration:"
@@ -1172,7 +1172,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b76435f9",
+   "id": "8240ae26",
    "metadata": {
     "hide-output": false
    },
@@ -1196,7 +1196,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37b951fc",
+   "id": "b7a9d60f",
    "metadata": {},
    "source": [
     "## Numerical solution\n",
@@ -1206,7 +1206,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4afc32fe",
+   "id": "8d1b5261",
    "metadata": {},
    "source": [
     "### Generating solutions\n",
@@ -1217,7 +1217,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f79f901a",
+   "id": "debb82f5",
    "metadata": {
     "hide-output": false
    },
@@ -1231,7 +1231,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e64f61a",
+   "id": "801f7d9a",
    "metadata": {
     "hide-output": false
    },
@@ -1248,7 +1248,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d334325",
+   "id": "81adb589",
    "metadata": {
     "hide-output": false
    },
@@ -1264,7 +1264,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d44c51f",
+   "id": "4e47197c",
    "metadata": {},
    "source": [
     "### Policy plots\n",
@@ -1275,7 +1275,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6d091032",
+   "id": "203387e8",
    "metadata": {
     "hide-output": false
    },
@@ -1298,7 +1298,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5778e8e2",
+   "id": "4cbe8f76",
    "metadata": {},
    "source": [
     "The match is not exact because we use a different estimate of the Markov\n",
@@ -1309,7 +1309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4fec65a1",
+   "id": "724130f6",
    "metadata": {},
    "source": [
     "## Exercise"
@@ -1317,7 +1317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96d99ea5",
+   "id": "860f9692",
    "metadata": {},
    "source": [
     "## Exercise 20.1\n",
@@ -1335,7 +1335,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d11d55c5",
+   "id": "afcb8c50",
    "metadata": {
     "hide-output": false
    },
@@ -1361,7 +1361,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6048a715",
+   "id": "702666af",
    "metadata": {},
    "source": [
     "Note that you will have to convert JAX arrays into NumPy arrays if you want to use this function.\n",
@@ -1380,7 +1380,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d456125",
+   "id": "ea8579cb",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 20.1](https://jax.quantecon.org/#overborrow_1)"
@@ -1389,7 +1389,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b19ca91f",
+   "id": "03fe7b5f",
    "metadata": {
     "hide-output": false
    },
@@ -1401,7 +1401,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2220f0f2",
+   "id": "602b6524",
    "metadata": {
     "hide-output": false
    },
@@ -1414,7 +1414,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98068e78",
+   "id": "b70f5416",
    "metadata": {},
    "source": [
     "We convert JAX arrays to NumPy arrays in order to use Numba."
@@ -1423,7 +1423,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62112d87",
+   "id": "f0a7e9db",
    "metadata": {
     "hide-output": false
    },
@@ -1435,7 +1435,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c9cb1682",
+   "id": "6a26b872",
    "metadata": {},
    "source": [
     "Now let’s compute borrowing for the decentralized equilibrium and the planner."
@@ -1444,7 +1444,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d7664a3",
+   "id": "feba77f1",
    "metadata": {
     "hide-output": false
    },
@@ -1458,7 +1458,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14f4bc24",
+   "id": "d85e687f",
    "metadata": {},
    "source": [
     "We suppress some annoying warnings produced by the current version of `seaborn`"
@@ -1467,7 +1467,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "547e58a6",
+   "id": "7f6e1a87",
    "metadata": {
     "hide-output": false
    },
@@ -1479,7 +1479,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f89a02d2",
+   "id": "b3f85584",
    "metadata": {},
    "source": [
     "Now let’s plot the distributions using a kernel density estimator."
@@ -1488,7 +1488,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6906bda",
+   "id": "11a713c7",
    "metadata": {
     "hide-output": false
    },
@@ -1506,7 +1506,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f9ddedb2",
+   "id": "a4064f9f",
    "metadata": {},
    "source": [
     "This corresponds to Figure 2 in Bianchi.\n",
@@ -1519,7 +1519,7 @@
   }
  ],
  "metadata": {
-  "date": 1745973983.8679402,
+  "date": 1747018761.521889,
   "filename": "overborrowing.md",
   "kernelspec": {
    "display_name": "Python",
