--- a/wealth_dynamics.ipynb
+++ b/wealth_dynamics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "4e1e4337",
+   "id": "2786c5e3",
    "metadata": {},
    "source": [
     "# Wealth Distribution Dynamics"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f61fce8",
+   "id": "e5604d3b",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c3b8194",
+   "id": "021e1b38",
    "metadata": {
     "hide-output": false
    },
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "903a5970",
+   "id": "a4171261",
    "metadata": {},
    "source": [
     "We will use the following imports:"
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b912fd7b",
+   "id": "216a175d",
    "metadata": {
     "hide-output": false
    },
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d93cbe3",
+   "id": "b3a76bfc",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -91,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57b758a6",
+   "id": "5c0a275f",
    "metadata": {
     "hide-output": false
    },
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7428daf5",
+   "id": "34af56a1",
    "metadata": {},
    "source": [
     "## Wealth dynamics\n",
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa9fe52c",
+   "id": "6f500b9f",
    "metadata": {},
    "source": [
     "## Implementation"
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a9b0946",
+   "id": "71ae3f1f",
    "metadata": {},
    "source": [
     "### Numba implementation\n",
@@ -182,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7252d48b",
+   "id": "248a54ab",
    "metadata": {
     "hide-output": false
    },
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "248af5ee",
+   "id": "b273e721",
    "metadata": {},
    "source": [
     "Here’s a function that generates the aggregate state process"
@@ -237,7 +237,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ca00a456",
+   "id": "f4f1d62b",
    "metadata": {
     "hide-output": false
    },
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c3c415b4",
+   "id": "16fcf42e",
    "metadata": {},
    "source": [
     "Here’s a function that updates household wealth by one period, taking the\n",
@@ -265,7 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1def3a91",
+   "id": "f107bced",
    "metadata": {
     "hide-output": false
    },
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53e98ebf",
+   "id": "20a75eae",
    "metadata": {},
    "source": [
     "Here’s a function to simulate the time series of wealth for an individual household"
@@ -298,7 +298,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fd0a79a3",
+   "id": "6018d9db",
    "metadata": {
     "hide-output": false
    },
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "06c86a47",
+   "id": "2849656f",
    "metadata": {},
    "source": [
     "Let’s look at the wealth dynamics of an individual household"
@@ -335,7 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c7d481c1",
+   "id": "14a5fc2e",
    "metadata": {
     "hide-output": false
    },
@@ -352,7 +352,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4767a4ca",
+   "id": "bee8a059",
    "metadata": {
     "hide-output": false
    },
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e1854d1e",
+   "id": "7bc2876f",
    "metadata": {},
    "source": [
     "Notice the large spikes in wealth over time.\n",
@@ -381,7 +381,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b5bdd3a",
+   "id": "c9c2f00c",
    "metadata": {
     "hide-output": false
    },
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35c0dc6e",
+   "id": "38f994cd",
    "metadata": {},
    "source": [
     "Parallelization works in the function above because the time path of each\n",
@@ -435,7 +435,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0616563b",
+   "id": "0176c97f",
    "metadata": {
     "hide-output": false
    },
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "71cebbc2",
+   "id": "d4dc9f62",
    "metadata": {},
    "source": [
     "We run it again to eliminate compile time."
@@ -464,7 +464,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "923c0c02",
+   "id": "d019d697",
    "metadata": {
     "hide-output": false
    },
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b26ff1df",
+   "id": "9b5f7339",
    "metadata": {},
    "source": [
     "### JAX implementation\n",
@@ -490,7 +490,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b05f8336",
+   "id": "71fd5ded",
    "metadata": {
     "hide-output": false
    },
@@ -530,7 +530,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a59c97c6",
+   "id": "8779a34b",
    "metadata": {},
    "source": [
     "Let’s see how long it takes to shift the cross-section of households forward\n",
@@ -540,7 +540,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8173eea3",
+   "id": "2bd6474f",
    "metadata": {
     "hide-output": false
    },
@@ -557,7 +557,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b63a4cc4",
+   "id": "7edcae45",
    "metadata": {
     "hide-output": false
    },
@@ -574,7 +574,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40e3354e",
+   "id": "69c5d622",
    "metadata": {
     "hide-output": false
    },
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7a7a38af",
+   "id": "4435fd6d",
    "metadata": {},
    "source": [
     "And let’s see how long it takes if we compile the loop."
@@ -599,7 +599,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63264f49",
+   "id": "f3906c96",
    "metadata": {
     "hide-output": false
    },
@@ -648,7 +648,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c155edb",
+   "id": "016055f1",
    "metadata": {
     "hide-output": false
    },
@@ -662,7 +662,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9cdf59c8",
+   "id": "139805c7",
    "metadata": {
     "hide-output": false
    },
@@ -681,7 +681,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "847d633f",
+   "id": "3cb490ab",
    "metadata": {
     "hide-output": false
    },
@@ -700,7 +700,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0afc09be",
+   "id": "30ce4249",
    "metadata": {
     "hide-output": false
    },
@@ -711,7 +711,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "349b4df3",
+   "id": "f12f2060",
    "metadata": {},
    "source": [
     "### Pareto tails\n",
@@ -730,7 +730,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b58b339a",
+   "id": "9afae287",
    "metadata": {
     "hide-output": false
    },
@@ -753,7 +753,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "92579f34",
+   "id": "d09bb2c6",
    "metadata": {},
    "source": [
     "### Lorenz curves and Gini coefficients\n",
@@ -768,7 +768,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dea48666",
+   "id": "1aa7f4a3",
    "metadata": {},
    "source": [
     "#### Lorenz curve\n",
@@ -789,7 +789,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5624bb19",
+   "id": "f1571423",
    "metadata": {
     "hide-output": false
    },
@@ -808,7 +808,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9eecaf8e",
+   "id": "f8e52560",
    "metadata": {},
    "source": [
     "Let’s test"
@@ -817,7 +817,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed7be11d",
+   "id": "40118e39",
    "metadata": {
     "hide-output": false
    },
@@ -834,7 +834,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "227f2abc",
+   "id": "c2e2ff67",
    "metadata": {
     "hide-output": false
    },
@@ -849,7 +849,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ebe6aecf",
+   "id": "cf7ff899",
    "metadata": {
     "hide-output": false
    },
@@ -861,7 +861,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a63f6d1c",
+   "id": "ff371abe",
    "metadata": {
     "hide-output": false
    },
@@ -874,7 +874,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5dc8686e",
+   "id": "ebbedaeb",
    "metadata": {
     "hide-output": false
    },
@@ -889,7 +889,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54a5b416",
+   "id": "12a74c0f",
    "metadata": {},
    "source": [
     "#### Gini Coefficient\n",
@@ -911,7 +911,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "04804565",
+   "id": "6abd384c",
    "metadata": {
     "hide-output": false
    },
@@ -929,7 +929,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ebdf1cbc",
+   "id": "1fa7f9d6",
    "metadata": {
     "hide-output": false
    },
@@ -941,7 +941,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1c829cf3",
+   "id": "1a491506",
    "metadata": {
     "hide-output": false
    },
@@ -954,7 +954,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4d748f8",
+   "id": "0b0cd959",
    "metadata": {
     "hide-output": false
    },
@@ -965,7 +965,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "494c481b",
+   "id": "8d109e19",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -973,7 +973,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "437eaba1",
+   "id": "6a35c1d6",
    "metadata": {},
    "source": [
     "## Exercise 7.1\n",
@@ -985,7 +985,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6cef1b96",
+   "id": "c8397c5c",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 7.1](https://jax.quantecon.org/#wd_ex1)\n",
@@ -996,7 +996,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c63df071",
+   "id": "b1fb45b8",
    "metadata": {
     "hide-output": false
    },
@@ -1017,7 +1017,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f535df8e",
+   "id": "3c48bd8c",
    "metadata": {
     "hide-output": false
    },
@@ -1029,7 +1029,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b1a24c56",
+   "id": "c4a7fd74",
    "metadata": {
     "hide-output": false
    },
@@ -1042,7 +1042,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10fbefab",
+   "id": "7764f3a4",
    "metadata": {
     "hide-output": false
    },
@@ -1053,7 +1053,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f78a8927",
+   "id": "628185d0",
    "metadata": {},
    "source": [
     "## Exercise 7.2\n",
@@ -1080,7 +1080,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90f21120",
+   "id": "2381683a",
    "metadata": {
     "hide-output": false
    },
@@ -1091,7 +1091,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1af9bda",
+   "id": "0d1a1453",
    "metadata": {},
    "source": [
     "Use the following as your initial cross-sectional distribution"
@@ -1100,7 +1100,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90cefb42",
+   "id": "cf6550c5",
    "metadata": {
     "hide-output": false
    },
@@ -1112,7 +1112,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f20d360",
+   "id": "528cc90d",
    "metadata": {},
    "source": [
     "Once you have done that, plot the Gini coefficients as well.\n",
@@ -1122,7 +1122,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4389d98b",
+   "id": "659cb64b",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 7.2](https://jax.quantecon.org/#wd_ex2)\n",
@@ -1133,7 +1133,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d4ca5a70",
+   "id": "dea96672",
    "metadata": {
     "hide-output": false
    },
@@ -1158,7 +1158,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd2bae17",
+   "id": "60dbb342",
    "metadata": {},
    "source": [
     "The Lorenz curve shifts downwards as returns on financial income rise, indicating a rise in inequality.\n",
@@ -1169,7 +1169,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d0a20f4e",
+   "id": "3ceed4f9",
    "metadata": {
     "hide-output": false
    },
@@ -1184,7 +1184,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6edb9f1",
+   "id": "c9036cea",
    "metadata": {},
    "source": [
     "As expected, inequality increases as returns on financial income rise."
@@ -1192,7 +1192,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "08c49616",
+   "id": "609be523",
    "metadata": {},
    "source": [
     "## Exercise 7.3\n",
@@ -1205,7 +1205,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30ff99d7",
+   "id": "615b32da",
    "metadata": {
     "hide-output": false
    },
@@ -1216,7 +1216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22255580",
+   "id": "eb825ea1",
    "metadata": {},
    "source": [
     "To isolate the role of volatility, set $ \\mu_r = - \\sigma_r^2 / 2 $ at each $ \\sigma_r $.\n",
@@ -1226,7 +1226,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef823677",
+   "id": "1a859872",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 7.3](https://jax.quantecon.org/#wd_ex3)\n",
@@ -1237,7 +1237,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f356aa94",
+   "id": "5faef44e",
    "metadata": {
     "hide-output": false
    },
@@ -1264,7 +1264,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33f6b78a",
+   "id": "eb78802b",
    "metadata": {
     "hide-output": false
    },
@@ -1279,7 +1279,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d96e299c",
+   "id": "2ae6083d",
    "metadata": {},
    "source": [
     "## Exercise 7.4\n",
@@ -1301,7 +1301,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29a655ab",
+   "id": "843db7ed",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 7.4](https://jax.quantecon.org/#wd_ex4)\n",
@@ -1314,7 +1314,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d785fa50",
+   "id": "e3f2203a",
    "metadata": {
     "hide-output": false
    },
@@ -1353,7 +1353,7 @@
   }
  ],
  "metadata": {
-  "date": 1745973984.084391,
+  "date": 1747018761.7357855,
   "filename": "wealth_dynamics.md",
   "kernelspec": {
    "display_name": "Python",
